Fix src from magnify svg

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 							<label for="search-input">
 								<div class="img">
 									<img
-										src="/imgs/magnify.svg"
+										src="./imgs/magnify.svg"
 										alt="magnify"
 										width="30px"
 										height="30px"
